kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      serviceAccountName: monitoring
      nodeSelector:
        homework: "true"
      containers:
        - name: web-server
          image: python:3.12-alpine
          command:
            - sh
            - -c
            - python3 -m http.server 8000 --directory /homework
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared-data
              mountPath: /homework
            - name: homework-config
              mountPath: /homework/conf
              readOnly: true
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          # lifecycle:
          #   preStop:
          #     exec:
          #       command:
          #         - rm
          #         - -f
          #         - /homework/index.html
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: homework-pvc
        - name: homework-config
          configMap:
            name: homework-config
